2016-XX-XX: Changes in version YYYY.MM.DD:
	- Add command line option '-E' for file containing exit fingerprints.
	- Add username to data directory, allowing multiple users on a single
	  machine to run exitmap in parallel.
	- Make dnspoison module populate its A records automatically.

2015-08-23: Changes in version 2015.08.23:
	- Exclude bad exits by default when selecting exit relays.
	- Pass torifying execution environments to modules.
	- Set PathsNeededToBuildCircuits to 0.95.
	- Replace mysocks/SocksiPy with home-made torsocks.

2015-04-06: Changes in version 2015.04.06:
	- Publish first release.